[package]
name = "neon-test"
version = "0.1.0"
authors = ["Marc Fuentes Montenegro <marc.fuentes@valudio.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_test"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
clipboard = "0.5.0"
enigo = "0.0.13"
